This file lists all the major user-visible changes to nullmailer.

- Fixed compile error in sendmail on GCC older than 4.9.
-------------------------------------------------------------------------------
Changes in version 2.1

- Added support for TLS anonymous authentication.
  Thanks Uffe Jakobsen.

- Fixed sendmail wrapper handling of empty sender on command line.
  Thanks Sebastian Wiedenroth.

- Fixed handling of quoted strings in the "remotes" file.
  Thanks Mihai Moldovan.

- Fixed nullmailer-inject handling of leading "From " lines.

- Some build fixes.

- Fixed bogus temporary gethostbyname error message when the protocol
  source address was incorrect.

- Fixed potential race condition in tests.
  Thanks Felix Lechner.

- Fixed handling of time values on 32-bit big-endian systems.
  Thanks Felix Lechner.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.0

- Added support to nullmailer-send to move permanently failing messages
  out of the queue, and to generate bounce messages.

- Added support for IPv6.

- Added program to generate bounce/delay messages.

- Added an "allmailfrom" control file to nullmailer-queue, causing all
  messages to share a hard-coded envelope sender.

- Added logging the message sender/recipient in nullmailer-send.

- Improved handling of system errors when reading config files.

- Secured handling of password options for protocol modules.

- Support standard shell quoting for options in the "remotes" file.

- Added protocol option to set a separate TLS client private key file.

- Added protocol option to bind the source address on connections.

- Fixed nullmailer-inject to report errors to stderr.

- Fixed gnutls cast to pointer from integer of different size warning.

- Fixed nullmailer-inject and -queue to handle the null (empty) sender