@@ -1,0 +1,25 @@
+. functions
+export HELOHOST=f.q.d.n
+
+make-testmail
+
+start server "tcpserver -1 ::0 0 sh $srcdir/test/authtest-smtp.sh $tmpdir/smtp-result"
+catch-port server
+
+echo 'Testing auth success with smtp'
+echo '250 OK' > $tmpdir/smtp-result
+protocol smtp --host=localhost --port=$port --user=example --pass=example 3<$testmail
+
+echo 'Testing auth login success with smtp'
+echo $'350 Go ahead\n250 AUTH' > $tmpdir/smtp-result
+protocol smtp --host=localhost --port=$port --user=example --pass=example --auth-login 3<$testmail
+
+echo 'Testing auth temporary failure with smtp'
+echo '450 No' > $tmpdir/smtp-result
+error 16 protocol smtp --host=localhost --port $port --user=example --pass=example 3<$testmail
+
+echo 'Testing auth permanent failure with smtp'
+echo '550 No' > $tmpdir/smtp-result
+error 20 protocol smtp --host=localhost --port $port --user=example --pass=example 3<$testmail
+
+stop server
