@@ -1,6 +1,9 @@
 This file lists all the major user-visible changes to nullmailer.
 
 - Fixed compile error in sendmail on GCC older than 4.9.
+
+- Fixed treating authentication failure as message rejection.
+  Thanks Fejes József
 -------------------------------------------------------------------------------
 Changes in version 2.1
 
